// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-wop5sb soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-r3pc3z soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="crp0863 soui-switch-content"
  >
    <div
      class="ch9zt3a soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-wop5sb soui-switch-wrapper c-bdcsjy soui-switch-wrapper-checked c-ia638v soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="chix7oe soui-switch-loading"
      />
    </div>
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-wop5sb soui-switch-wrapper c-ia638v soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="chix7oe soui-switch-loading"
      />
    </div>
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-wop5sb soui-switch-wrapper c-c6kk1a soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-wop5sb soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-wop5sb soui-switch-wrapper c-camfju soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-wop5sb soui-switch-wrapper c-bdcsjy soui-switch-wrapper-checked c-ia638v soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-wop5sb soui-switch-wrapper c-ia638v soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-r3pc3z soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="crp0863 soui-switch-content"
    >
      <div
        class="ch9zt3a soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
